Using research pipeline webhooks to feed the FE instead of re-fetching things from DB
